k8s/production/explorer-ui/sp_testnet/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: explorer-ui-sp-testnet-label
  name: explorer-ui-sp-testnet-deployment
  namespace: chicmoz-prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: explorer-ui-sp-testnet-label
  template:
    metadata:
      labels:
        app: explorer-ui-sp-testnet-label
    spec:
      imagePullSecrets:
        - name: registry-aztlan-containers
      containers:
        - image: registry.digitalocean.com/aztlan-containers/explorer-ui-sp-testnet:latest
          name: explorer-ui-sp-testnet
          resources:
            limits:
              memory: 300Mi
              cpu: 100m
          ports:
            - name: http-app-port
              containerPort: 80
              protocol: TCP
