k8s/production/explorer-ui/sp_testnet/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-explorer-ui-sp-testnet
  namespace: chicmoz-prod
  annotations:
    cert-manager.io/cluster-issuer: "aztecscan-issuer-production"
spec:
  ingressClassName: nginx
  tls:
    - secretName: aztecscan-ui-tls-sp-testnet
      hosts:
        - sp.aztecscan.xyz
  rules:
    - host: sp.aztecscan.xyz
      http:
        paths:
          - backend:
              service:
                name: explorer-ui-sp-testnet
                port:
                  name: http-app
            path: /
            pathType: Prefix
status:
  loadBalancer: {}
